--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,7 @@ p {
     background: var(--bg-envelope-color);
     box-shadow: 0 0 40px var(--shadow-color);
     position: relative;
+    transition: ease-in-out .5s;
 }
 
 .container>.envelope-wrapper>.envelope {
@@ -103,10 +104,15 @@ p {
 
 .letter {
     position: absolute;
-    right: 20%;
-    bottom: 0;
-    width: 54%;
-    height: 80%;
+    /* right: 20%; */
+    /* bottom: 0; */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* width: 54%;
+    height: 80%; */
+    width: 200px;
+    height: 210px;
     background: var(--primary);
     transition: all 1s ease-in-out;
     padding: 20px 10px;
@@ -159,7 +165,7 @@ p {
 
 .flap>.envelope .letter {
     bottom: 110px;
-    transform: scale(1.5);
+    /* transform: scale(1.5); */
     transition-delay: 1s;
 }
 
@@ -169,6 +175,12 @@ p {
 }
 
 /* alert */
+
+.alert {
+    text-align: center;
+    padding: 0 10px;
+}
+
 .alert span {
     font-size: 1.2rem;
     opacity: 0;
@@ -177,4 +189,58 @@ p {
 
 .alert span.active {
     opacity: 1;
+}
+
+.main {
+    position: absolute;
+    top: 43.5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200px;
+    height: 210px;
+    background-color: var(--primary);
+    transition: all 900ms;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main.active {
+    width: 100%;
+    height: 100vh;
+    top: 50%;
+}
+
+.overflow {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    display: grid;
+    place-items: center;
+}
+
+.content-main {
+    display: none;
+    padding: 30px;
+    transition: 900ms;
+    opacity: 0;
+}
+
+.content-main.active {
+    display: flex;
+    opacity: 1;
+}
+
+.content-main p {
+    max-width: 600px;
+    text-align: justify;
+    color: #000;
+    transition: 900ms;
+    opacity: 0;
+    transform: translateY(-50px);
+}
+
+.content-main p.active {
+    opacity: 1;
+    transform: translateY(0);
 }
