--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,11 @@ p {
     box-shadow: 0 0 40px var(--shadow-color);
     position: relative;
     transition: ease-in-out .5s;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
 }
 
 .container>.envelope-wrapper>.envelope {
@@ -193,7 +198,7 @@ p {
 
 .main {
     position: absolute;
-    top: 43.5%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 200px;
@@ -209,6 +214,7 @@ p {
     width: 100%;
     height: 100vh;
     top: 50%;
+    z-index: 2;
 }
 
 .overflow {
